2914-12-04  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/tst-ftell-active-handler.c (do_ftruncate_test): Add
	O_TRUNC flag for w and w+ modes.
	(do_rewind_test): Likewise.
	(do_ftell_test): Likewise.
	(do_write_test): Likewise.

	[BZ #17647]
	* libio/fileops.c (do_ftell): Seek only when there are
	unflushed writes.
	* libio/wfileops.c (do_ftell_wide): Likewise.
	* libio/tst-ftell-active-handler.c (do_ftruncate_test): New
	test case.
	(do_one_test): Call it.

2014-12-03  Joseph Myers  <joseph@codesourcery.com>

	* conform/list-header-symbols.pl (%extra_syms): Add getdate_err
	for XPG4, UNIX98, XOPEN2K and XOPEN2K8.
	* conform/Makefile (test-xfail-XOPEN2K/pthread.h/linknamespace):
	Remove variable.
	(test-xfail-XOPEN2K/time.h/linknamespace): Likewise.
	(test-xfail-XOPEN2K8/pthread.h/linknamespace): Likewise.
	(test-xfail-XOPEN2K8/time.h/linknamespace): Likewise.

2014-12-02  Joseph Myers  <joseph@codesourcery.com>

	* conform/Makefile (test-xfail-XOPEN2K/aio.h/linknamespace):
	Remove variable.
	(test-xfail-XOPEN2K8/aio.h/linknamespace): Likewise.

	[BZ #17668]
	* inet/ifaddrs.c (getifaddrs): Rename to __getifaddrs and define
	as weak alias of __getifaddrs.  Use libc_hidden_weak.
	(freeifaddrs): Rename to __freeifaddrs and define as weak alias of
	__freeifaddrs.  Use libc_hidden_weak.
	* sysdeps/gnu/ifaddrs.c (getifaddrs): Rename to __getifaddrs and
	define as weak alias of __getifaddrs.  Use libc_hidden_weak.
	(freeifaddrs): Rename to __freeifaddrs and define as weak alias of
	__freeifaddrs.  Use libc_hidden_weak.
	* sysdeps/unix/sysv/linux/ifaddrs.c (getifaddrs): Rename to
	__getifaddrs and define as weak alias of __getifaddrs.  Use
	libc_hidden_weak.
	(freeifaddrs): Rename to __freeifaddrs and define as weak alias of
	__freeifaddrs.  Use libc_hidden_weak.
	* conform/Makefile (test-xfail-XOPEN2K/net/if.h/linknamespace):
	Remove variable.
	(test-xfail-POSIX2008/net/if.h/linknamespace): Likewise.
	(test-xfail-XOPEN2K8/net/if.h/linknamespace): Likewise.
